--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,linux,windows,git,unity
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux,windows,git,unity
+# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,git,unity
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,git,unity
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -162,5 +162,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,git,unity
+# End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,git,unity
 
+.idea/
